Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-8276

[C++][Dataset] Scanning a Fragment does not take into account the partition columns

    XMLWordPrintableJSON

Details

    Description

      Follow-up on ARROW-8061, the to_table method doesn't work for fragments created from a partitioned dataset.

      (will add a reproducer later)

      cc bkietz

      Attachments

        Issue Links

          Activity

            People

              bkietz Ben Kietzman
              jorisvandenbossche Joris Van den Bossche
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 3h
                  3h