ARROW-8276: [C++][Dataset] Use Scanner for Fragment.to_table

This way batches yielded by Fragment.Scan are projected and filtered.

Closes #6765 from bkietz/8276-Scanning-a-Fragment-does-

Lead-authored-by: Benjamin Kietzman <bengilgit@gmail.com>
Co-authored-by: Joris Van den Bossche <jorisvandenbossche@gmail.com>
Signed-off-by: Benjamin Kietzman <bengilgit@gmail.com>