python/pyarrow/_dataset.pyx
@@ -333,10 +333,43 @@ cdef class FileSystemDataset(Dataset):
         """The FileFormat of this source."""
         return FileFormat.wrap(self.filesystem_dataset.format())
 
+cdef shared_ptr[CExpression] _insert_implicit_casts(Expression filter,
+                                                    Schema schema) except *:
+    assert schema is not None
 
-def _empty_dataset_scanner(Schema schema not None, columns=None, filter=None):
-    dataset = UnionDataset(schema, children=[])
-    return Scanner(dataset, columns=columns, filter=filter)
+    if filter is None:
+        return ScalarExpression(True).unwrap()
+
+    return GetResultValue(
+        CInsertImplicitCasts(
+            deref(filter.unwrap().get()),
+            deref(pyarrow_unwrap_schema(schema).get())
+        )
+    )
+
+
+cdef shared_ptr[CScanOptions] _make_scan_options(
+        Schema schema, Expression partition_expression, object columns=None,
+        Expression filter=None) except *:
+    cdef:
+        shared_ptr[CScanOptions] options
+        CExpression* c_partition_expression
+
+    assert schema is not None
+    assert partition_expression is not None
+
+    filter = Expression.wrap(_insert_implicit_casts(filter, schema))
+    filter = filter.assume(partition_expression)
+
+    empty_dataset = UnionDataset(schema, children=[])
+    scanner = Scanner(empty_dataset, columns=columns, filter=filter)
+    options = scanner.unwrap().get().options()
+
+    c_partition_expression = partition_expression.unwrap().get()
+    check_status(CSetPartitionKeysInProjector(deref(c_partition_expression),
+                                              &options.get().projector))
+
+    return options
 
 
 cdef class FileFormat:
@@ -371,6 +404,7 @@ cdef class FileFormat:
         return self.wrapped
 
     def inspect(self, str path not None, FileSystem filesystem not None):
+        """Infer the schema of a file."""
         cdef:
             shared_ptr[CSchema] c_schema
 
@@ -381,16 +415,20 @@ cdef class FileFormat:
     def make_fragment(self, str path not None, FileSystem filesystem not None,
                       Schema schema=None, columns=None, filter=None,
                       Expression partition_expression=ScalarExpression(True)):
+        """
+        Make a FileFragment of this FileFormat. The filter may not reference
+        fields absent from the provided schema. If no schema is provided then
+        one will be inferred.
+        """
         cdef:
             shared_ptr[CScanOptions] c_options
             shared_ptr[CFileFragment] c_fragment
-            Scanner scanner
 
         if schema is None:
             schema = self.inspect(path, filesystem)
 
-        scanner = _empty_dataset_scanner(schema, columns, filter)
-        c_options = scanner.unwrap().get().options()
+        c_options = _make_scan_options(schema, partition_expression,
+                                       columns, filter)
 
         c_fragment = GetResultValue(
             self.format.MakeFragment(CFileSource(tobytes(path),
@@ -436,6 +474,14 @@ cdef class Fragment:
         self.init(sp)
         return self
 
+    cdef inline shared_ptr[CFragment] unwrap(self):
+        return self.wrapped
+
+    @property
+    def schema(self):
+        """Return the schema of batches scanned from this Fragment."""
+        return pyarrow_wrap_schema(self.fragment.schema())
+
     @property
     def partition_expression(self):
         """An Expression which evaluates to true for all data viewed by this
@@ -453,22 +499,8 @@ cdef class Fragment:
         -------
         table : Table
         """
-        cdef:
-            shared_ptr[CScanContext] context
-            shared_ptr[CScanOptions] options
-            CScanTaskIterator iterator
-            shared_ptr[CTable] table
-
-        options = self.fragment.scan_options()
-
-        context = make_shared[CScanContext]()
-        context.get().pool = maybe_unbox_memory_pool(memory_pool)
-
-        iterator = move(GetResultValue(self.fragment.Scan(context)))
-        table = GetResultValue(CScanTask.ToTable(options, context,
-                                                 move(iterator)))
-
-        return pyarrow_wrap_table(table)
+        scanner = Scanner._from_fragment(self, use_threads, memory_pool)
+        return scanner.to_table()
 
     def scan(self, MemoryPool memory_pool=None):
         """Returns a stream of ScanTasks
@@ -480,23 +512,7 @@ cdef class Fragment:
         -------
         scan_tasks : iterator of ScanTask
         """
-        cdef:
-            shared_ptr[CScanContext] context
-            CScanTaskIterator iterator
-            shared_ptr[CScanTask] task
-
-        # create scan context
-        context = make_shared[CScanContext]()
-        context.get().pool = maybe_unbox_memory_pool(memory_pool)
-
-        iterator = move(GetResultValue(self.fragment.Scan(move(context))))
-
-        while True:
-            task = GetResultValue(iterator.Next())
-            if task.get() == nullptr:
-                raise StopIteration()
-            else:
-                yield ScanTask.wrap(task)
+        return Scanner._from_fragment(self, memory_pool).scan()
 
 
 cdef class FileFragment(Fragment):
@@ -581,10 +597,7 @@ cdef class ParquetFileFragment(FileFragment):
             shared_ptr[CExpression] c_extra_filter
             shared_ptr[CFragment] c_fragment
 
-        if extra_filter is None:
-            extra_filter = ScalarExpression(True)
-        c_extra_filter = extra_filter.unwrap()
-
+        c_extra_filter = _insert_implicit_casts(extra_filter, self.schema)
         c_format = <CParquetFileFormat*> self.file_fragment.format().get()
         c_iterator = move(GetResultValue(c_format.GetRowGroupFragments(deref(
             self.parquet_file_fragment), move(c_extra_filter))))
@@ -694,7 +707,6 @@ cdef class ParquetFileFormat(FileFormat):
         cdef:
             shared_ptr[CScanOptions] c_options
             shared_ptr[CFileFragment] c_fragment
-            Scanner scanner
             vector[int] c_row_groups
 
         if row_groups is None:
@@ -706,8 +718,8 @@ cdef class ParquetFileFormat(FileFormat):
         if schema is None:
             schema = self.inspect(path, filesystem)
 
-        scanner = _empty_dataset_scanner(schema, columns, filter)
-        c_options = scanner.unwrap().get().options()
+        c_options = _make_scan_options(schema, partition_expression,
+                                       columns, filter)
 
         c_fragment = GetResultValue(
             self.parquet_format.MakeFragment(CFileSource(tobytes(path),
@@ -1314,6 +1326,8 @@ cdef class Scanner:
         # create scan context
         context = make_shared[CScanContext]()
         context.get().pool = maybe_unbox_memory_pool(memory_pool)
+        if use_threads is not None:
+            context.get().use_threads = use_threads
 
         # create scanner builder
         builder = GetResultValue(
@@ -1322,18 +1336,11 @@ cdef class Scanner:
 
         # set the builder's properties
         if columns is not None:
-            columns_to_project = [tobytes(c) for c in columns]
-            check_status(builder.get().Project(columns_to_project))
-        if filter is not None:
-            filter_expression = GetResultValue(
-                CInsertImplicitCasts(
-                    deref(filter.unwrap().get()),
-                    deref(builder.get().schema().get())
-                )
-            )
-            check_status(builder.get().Filter(filter_expression))
-        if use_threads is not None:
-            check_status(builder.get().UseThreads(use_threads))
+            check_status(builder.get().Project([tobytes(c) for c in columns]))
+
+        check_status(builder.get().Filter(_insert_implicit_casts(
+            filter, pyarrow_wrap_schema(builder.get().schema())
+        )))
 
         check_status(builder.get().BatchSize(batch_size))
 
@@ -1341,15 +1348,27 @@ cdef class Scanner:
         scanner = GetResultValue(builder.get().Finish())
         self.init(scanner)
 
-    cdef void init(self, shared_ptr[CScanner]& sp):
+    cdef void init(self, const shared_ptr[CScanner]& sp):
         self.wrapped = sp
         self.scanner = sp.get()
 
     @staticmethod
-    cdef wrap(shared_ptr[CScanner]& sp):
+    cdef wrap(const shared_ptr[CScanner]& sp):
         cdef Scanner self = Scanner.__new__(Scanner)
         self.init(sp)
         return self
+
+    @staticmethod
+    def _from_fragment(Fragment fragment not None, bint use_threads=True,
+                       MemoryPool memory_pool=None):
+        cdef:
+            shared_ptr[CScanContext] context
+
+        context = make_shared[CScanContext]()
+        context.get().pool = maybe_unbox_memory_pool(memory_pool)
+        context.get().use_threads = use_threads
+
+        return Scanner.wrap(make_shared[CScanner](fragment.unwrap(), context))
 
     cdef inline shared_ptr[CScanner] unwrap(self):
         return self.wrapped
